<resources>
    <string name="app_name">ProjectBlocks</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_custom_list_view_android_example">CustomListViewAndroidExample</string>
    <string name="maximum">GET MORE!</string>

    <string name="home_page_menu_title">Home</string>
    <string name="find_food_menu_title">Find Food</string>
    <string name="find_cafe_menu_title">Find Cafe</string>
    <string name="nearest_cafe_menu_title">Go To Nearest Cafe</string>
    <string name="preference_menu_title">Preference</string>
    <string name="history_menu_title">History</string>

    <string name="title_activity_result">More Choice</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_main">Start Here!</string>
    <string name="title_activity_food_menu">Food Menu</string>
    <string name="title_activity_category_header">CategoryHeaderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_food_menu_item">FoodMenuItemActivity</string>
    <string name="food_menu_search_query_hint">Search Food</string>
    <string name="title_activity_cafeteria_list">List Of Cafeterias</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="hello">Hello World :)</string>
    <string name="new_preference_hint">Food</string>


</resources>
