<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.osu.cse.projectblocks.activities.MainActivity">
    <item
        android:id="@+id/home_menu_item"
        android:orderInCategory="1"
        android:title="@string/home_page_menu_title" />
    <item
        android:id="@+id/find_food"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/find_food_menu_title"/>
    <item
        android:id="@+id/find_cafe"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/find_cafe_menu_title"/>
    <item
        android:id="@+id/nearest_cafe"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/nearest_cafe_menu_title"/>
    <item
        android:id="@+id/setting_preference"
        android:orderInCategory="5"
        app:showAsAction="never"
        android:title="@string/preference_menu_title"/>

</menu>

